<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_waypoints</name>
  <version>0.0.1</version>
  <description>
    맵에서 센터라인을 1회 오프라인 추출하고, 이를 nav_msgs/Path로 퍼블리시하는 패키지.
    race_stack의 planner 모듈을 학부 수준으로 단순화한 버전.
  </description>
  <maintainer email="wxxn1004@gmail.com">team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
